data/collection/fixes/descriptions/java/JDK-8171412
ompiling/processing m2x files:
[DIRECT]:
testRuntime2Compile/18/m2x/module-info.java:1: error: module not found: m1x
module m2x { requires m1x; exports test; }
^
1 error

test: testAllModulePath
[DIRECT]:
testAllModulePath/cp-src/test/Test.java:1: error: package api does not exist
package test; public class Test { api.Api api; }
                                     ^
1 error
[DIRECT]:
error: module not found: jdk.aot
error: module not found: jdk.vm.compiler
2 errors
Exception running test testAllModulePath: toolbox.Task$TaskError: Task javac failed: rc=1
toolbox.Task$TaskError: Task javac failed: rc=1
	at toolbox.AbstractTask.checkExit(AbstractTask.java:112)
	at toolbox.JavacTask.run(JavacTask.java:303)
	at AddLimitMods.testAllModulePath(AddLimitMods.java:272)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:538)
	at toolbox.TestRunner.runTests(TestRunner.java:89)
	at ModuleTestBase.runTests(ModuleTestBase.java:50)
	at AddLimitMods.main(AddLimitMods.java:78)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:538)
	at com.sun.javatest.regtest.agent.MainActionHelper$SameVMRunnable.run(MainActionHelper.java:230)
	at java.base/java.lang.Thread.run(Thread.java:844)

test: testObservableForUnnamed
running variant: options=[], expected log: Test.java:2:18: compiler.err.doesnt.exist: javax.annotation
Test.java:5:19: compiler.err.doesnt.exist: javax.xml.bind
2 errors

[DIRECT]:
Test.java:2:18: compiler.err.doesnt.exist: javax.annotation
Test.java:5:19: compiler.err.doesnt.exist: javax.xml.bind
2 errors
running variant: options=[--add-modules, java.annotations.common,java.xml.bind], expected log: null
running variant: options=[--limit-modules, java.xml.ws,jdk.compiler], expected log: null
running variant: options=[--add-modules, ALL-SYSTEM], expected log: null

test: testManual
[DIRECT]:
testManual/module-src/m1x/module-info.java:1: error: module not found: m2x
module m1x { requires m2x; requires m3x; }
^
1 error
[DIRECT]:
testManual/module-src/m1x/module-info.java:1: error: module not found: m3x
module m1x { requires m2x; requires m3x; }
^
1 error
[DIRECT]:
testManual/module-src/m1x/module-info.java:1: error: module not found: m2x
module m1x { requires m2x; requires m3x; }
^
1 error

4 tests, 1 errors
java.lang.Exception: 1 errors found
	at toolbox.TestRunner.runTests(TestRunner.java:116)
	at ModuleTestBase.runTests(ModuleTestBase.java:50)
	at AddLimitMods.main(AddLimitMods.java:78)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:538)
	at com.sun.javatest.regtest.agent.MainActionHelper$SameVMRunnable.run(MainActionHelper.java:230)
	at java.base/java.lang.Thread.run(Thread.java:844)